--- a/views/index.html
+++ b/views/index.html
@@ -25,7 +25,7 @@
     </div>
     <div class="footer">
       <p>
-        By <a href="https://www.freecodecamp.org/">freeCodeCamp.org</a>
+        By <a href="https://www.github.com/ismekashif/">Mohammed Kashif</a>
       </p>
     </div>
   </body>
